--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "clean.js",
+  "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
@@ -10,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.32.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "parcel": "^2.9.3"
   }
+  
 }
